--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "@libsql/client": "^0.14.0",
     "bcryptjs": "^2.4.3",
+    "form-data": "^4.0.0",
+    "formidable-serverless": "^2.2.0",
     "jsonwebtoken": "^9.0.2",
     "sm-crypto": "^0.3.7"
   },
