--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "form-data": "^4.0.0",
     "formidable": "^3.5.4",
     "jsonwebtoken": "^9.0.2",
+    "node-fetch": "^2.7.0",
     "sm-crypto": "^0.3.7"
   },
   "devDependencies": {
